# stockman

./: .gitignore  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tauri.md  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
json/: 交易中.json  休盘中.json  已收盘.json
src/: App.tsx  main.tsx  menuBar.tsx  news.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: stockman.icns
src-tauri/src/: main.rs
src/api/upsort/: api.ts  type.ts
src/api/xueqiu/: api.ts  type.ts
src/apiv2/: api.ts  xueqiu.ts
src/component/: base.ts  bottomBar.tsx  state.ts  stockList.tsx  topIndex.tsx  util.ts
src/component/menubar/: bottomBar.tsx  search.tsx  setting.tsx  stockExpand.tsx  stockList.tsx  topBar.tsx  topIndex.tsx
src/component/modal/: coin.tsx  modal.tsx  search.tsx  setting.tsx
